objects/CO_Treasury_Product_Wire_Accounts__c.object
<CustomObject>
    <fields>
        <fullName>CF_Account_Daily_Limit__c</fullName>
        <label>Account Daily Limit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Account_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Number</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipName>Treasury_Product_Wire_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Dual_Control_Procedures_in_Place__c</fullName>
        <label>Dual Control Procedures in Place?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Treasury_Service__c</fullName>
        <description>This field is used to map Wire Accounts record to the Treasury Service record.</description>
        <label>Treasury Service</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipName>Treasury_Product_Wire_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Wire Account</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Treasury Product Fraud Solutions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wire Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>